# caffeclion

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  testcpp.cpp
caffe/: Makefile
caffe/src/caffe/: data_transformer.cpp
model/: gender_train_val.prototxt~
